--- a/core/templates/registration/register.html
+++ b/core/templates/registration/register.html
@@ -14,7 +14,7 @@
                     </div>
                     <form action="" method="post">
                         {% csrf_token %}
-                        {% crispy form 'bootstrap5' %}
+                        {{ form|crispy }}
                         <div class="d-grid">
                             <button class="btn btn-primary btn-lg" type="submit">Registrarse</button>
                         </div>
